2012-06-18  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-oem-spec.h: New file.

	* ipmi-oem/: Migrate various information into new ipmi-oem-spec.h
	file and
	libfreeipmi/include/spec/ipmi-system-info-parameters-oem-spec.h.

	* ipmipower/, libfreeipmi/sel/: Use new macros in ipmi-oem-spec.h.

	* ipmi-oem/ipmi-oem-thirdparty.h, ipmi-oem/ipmi-oem-thirdparty.c:
	New files.

	* ipmi-oem/ipmi-oem-inventec.c, ipmi-oem/ipmi-oem-quanta.c:
	Migrate some commmon functions to ipmi-oem-thirdparty.c and
	ipmi-oem-thirdparty.h.
	
2012-06-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/interpret/: Support new interpretations based on
	sensors found on IBM X3850 X5: Version Change, System Firmware
	Progress Transition Severity, Button/Switch Transition Severity,
	Chassis Transition Severity, POST Memory Resize State,
	Cable/Interconnect Transition Severity, Boot Error Transition
	Severity, Slot Connector Transition Severity, Memory State, and
	Memory Transition Severity.

	* etc/freeipmi_interpret_sel.conf,
	etc/freeipmi_interpret_sensor.conf, man/: Update appropriately for
	changes.

	* etc/, man/: Add missing documentation.
	
2012-06-07  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sdr/ipmi-sdr-cache-create.c (ipmi_sdr_cache_create):
	Fix slight logic bug with cache_create_flags.
	
2012-06-06  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/Makefile.am: Fix build bug.
	
2012-06-05  Albert Chu <chu11@llnl.gov>

	* common/miscutil/conffile.c,
	libfreeipmi/util/ipmi-sensor-and-event-code-tables-util.c,
	libfreeipmi/util/ipmi-sensor-util.c,
	libfreeipmi/util/ipmi-device-types-util.c, : Fix -Wformat-security
	warnings.

2012-06-04  Yaroslav Halchenko <debian@onerussian.com>

	* man/ipmi-oem.8.pre.in: Minor tune ups.
	
2012-06-01  Albert Chu <chu11@llnl.gov>

	Merge branch intels2600jfrevision

	* libfreeipmi/include/freeipmi/spec/ipmi-sensor-and-event-code-tables-oem-spec.h,
	libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-spec.c: