@@ -1749,7 +1749,7 @@ config_file_parse (const char *filename,
         "bmc-config-verbose-count",
         CONFFILE_OPTION_INT,
         -1,
-        _config_file_non_negative_int,
+        _config_file_unsigned_int,
         1,
         0,
         &(bmc_config_data.verbose_count_count),
@@ -2160,7 +2160,7 @@ config_file_parse (const char *filename,
         "ipmi-chassis-config-verbose-count",
         CONFFILE_OPTION_INT,
         -1,
-        _config_file_non_negative_int,
+	_config_file_unsigned_int,
         1,
         0,
         &(ipmi_chassis_config_data.verbose_count_count),
@@ -2352,7 +2352,7 @@ config_file_parse (const char *filename,
         "ipmi-fru-verbose-count",
         CONFFILE_OPTION_INT,
         -1,
-        _config_file_non_negative_int,
+	_config_file_unsigned_int,
         1,
         0,
         &(ipmi_fru_data.verbose_count_count),
@@ -2481,7 +2481,7 @@ config_file_parse (const char *filename,
         "ipmi-oem-verbose-count",
         CONFFILE_OPTION_INT,
         -1,
-        _config_file_non_negative_int,
+	_config_file_unsigned_int,
         1,
         0,
         &(ipmi_oem_data.verbose_count_count),
@@ -2584,7 +2584,7 @@ config_file_parse (const char *filename,
         "pef-config-verbose-count",
         CONFFILE_OPTION_INT,
         -1,
-        _config_file_non_negative_int,
+	_config_file_unsigned_int,
         1,
         0,
         &(ipmi_pef_config_data.verbose_count_count),
@@ -2672,7 +2672,7 @@ config_file_parse (const char *filename,
         "ipmi-pef-config-verbose-count",
         CONFFILE_OPTION_INT,
         -1,
-        _config_file_non_negative_int,
+	_config_file_unsigned_int,
         1,
         0,
         &(ipmi_pef_config_data.verbose_count_count),
@@ -2851,7 +2851,7 @@ config_file_parse (const char *filename,
         "ipmi-pet-verbose-count",
         CONFFILE_OPTION_INT,
         -1,
-        _config_file_non_negative_int,
+	_config_file_unsigned_int,
         1,
         0,
         &(ipmi_pet_data.verbose_count_count),
@@ -3045,7 +3045,7 @@ config_file_parse (const char *filename,
         "ipmi-sel-verbose-count",
         CONFFILE_OPTION_INT,
         -1,
-        _config_file_non_negative_int,
+	_config_file_unsigned_int,
         1,
         0,
         &(ipmi_sel_data.verbose_count_count),
@@ -3318,7 +3318,7 @@ config_file_parse (const char *filename,
         "ipmi-sensors-verbose-count",
         CONFFILE_OPTION_INT,
         -1,
-        _config_file_non_negative_int,
+	_config_file_unsigned_int,
         1,
         0,
         &(ipmi_sensors_data.verbose_count_count),
@@ -3805,7 +3805,7 @@ config_file_parse (const char *filename,
         "ipmimonitoring-verbose-count",
         CONFFILE_OPTION_INT,
         -1,
-        _config_file_non_negative_int,
+	_config_file_unsigned_int,
         1,
         0,
         &(ipmi_sensors_data.verbose_count_count),
@@ -3984,7 +3984,7 @@ config_file_parse (const char *filename,
         "ipmi-sensors-config-verbose-count",
         CONFFILE_OPTION_INT,
         -1,
-        _config_file_non_negative_int,
+	_config_file_unsigned_int,
         1,
         0,
         &(ipmi_sensors_config_data.verbose_count_count),
